tests/ui/rfcs/rfc-2632-const-trait-impl/impl-with-default-fn-fail.stderr
error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error[E0046]: not all trait items implemented, missing: `req`
  --> $DIR/impl-with-default-fn-fail.rs:13:1
   |
LL |     fn req(&self);
   |     -------------- `req` from trait
...
LL | impl const Tr for u16 {
   | ^^^^^^^^^^^^^^^^^^^^^ missing `req` in implementation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0046`.
